--- a/front/package.json
+++ b/front/package.json
@@ -34,8 +34,10 @@
         "@angular/platform-server": "^20.1.0",
         "@angular/router": "^20.1.0",
         "@angular/ssr": "^20.1.6",
+        "@types/lodash": "^4.17.20",
         "@types/three": "^0.179.0",
         "express": "^5.1.0",
+        "lodash": "^4.17.21",
         "rxjs": "~7.8.0",
         "three": "^0.179.1",
         "tslib": "^2.3.0",
