--- a/front/package.json
+++ b/front/package.json
@@ -36,6 +36,7 @@
         "@types/three": "^0.179.0",
         "express": "^5.1.0",
         "lodash": "^4.17.21",
+        "marked": "^16.2.0",
         "rxjs": "~7.8.0",
         "three": "^0.179.1",
         "tslib": "^2.3.0",
