--- a/front/package.json
+++ b/front/package.json
@@ -35,7 +35,7 @@
         "@types/lodash": "^4.17.20",
         "@types/three": "^0.179.0",
         "express": "^5.1.0",
-        "lodash": "^4.17.21",
+        "lodash-es": "^4.17.21",
         "marked": "^16.2.0",
         "rxjs": "~7.8.0",
         "three": "^0.179.1",
@@ -47,6 +47,7 @@
         "@angular/cli": "^20.1.6",
         "@angular/compiler-cli": "^20.1.0",
         "@types/jasmine": "~5.1.0",
+        "@types/lodash-es": "^4.17.12",
         "jasmine-core": "~5.8.0",
         "karma": "~6.4.0",
         "karma-chrome-launcher": "~3.2.0",
