chore(vercel): removed deprecated builds

--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,9 @@
 {
 	"$schema": "https://openapi.vercel.sh/vercel.json",
 	"version": 2,
-	"builds": [
-		{
-			"src": "front/package.json",
-			"use": "@vercel/angular"
-		},
-		{
-			"src": "back/src/server.ts",
-			"use": "@vercel/node"
-		}
-	],
 	"rewrites": [
 		{
-			"source": "/api/(.*)",
+			"source": "/api/:path*",
 			"destination": "/back/src/server.ts"
 		}
 	]
