fix(back): adapted to vercel structure

--- a/back/package.json
+++ b/back/package.json
@@ -2,10 +2,7 @@
 	"name": "portfolio",
 	"version": "0.0.0",
 	"description": "",
-	"scripts": {
-		"build": "esbuild 'src/**/*.ts' --minify --outdir=./dist",
-		"start": "node dist/server.js"
-	},
+	"scripts": {},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
